--- a/ProyectoPBD/app/views/admin/index.html.erb
+++ b/ProyectoPBD/app/views/admin/index.html.erb
@@ -5,20 +5,22 @@
             <div class="col-lg-12 ">
 				<div class="row cn1">
 					<div class="col-lg-6 ">
+				    <div class="bs-example">
+					    <div class="panel panel-info">
+					      <!-- Default panel contents -->
+					      <div class="panel-heading">Modificar costos y Otros</div>
+
+
+					      <div class="panel-body">
+
 						<hr>
-						<h2>Modificar Costos y Otros</h2>
-						<hr>
+
 							<a href="admin/costos_otros"><img class="img-circle img-borde" height="250px" src="http://1.bp.blogspot.com/_COiSBqI9PLE/Sg8xxy1U72I/AAAAAAAAAX8/PV_9VhRQygw/s400/WEB+Icono+Pagina+Web+en+Construccion.jpg" /></a>
 				
 						<br><br><br><br>
 				
 											
-					    <div class="bs-example">
-					    <div class="panel panel-primary">
-					      <!-- Default panel contents -->
-					      <div class="panel-heading">Modificar costos y Otros</div>
-					      <div class="panel-body">
-							<b>En esta sección es posible modificar, es decir, se puede ver, agregar o modificar los siguientes módulos de ActiveCab:</b><br>
+							<b>En esta sección es posible ver, agregar o modificar los siguientes módulos de ActiveCab:</b><br>
 					      </div>
 
 					      <!-- List group -->
@@ -37,19 +39,18 @@
 
 					</div>
 					<div class="col-lg-6 ">
-						<hr>	
-						<h2>Modificar Usuarios</h2>
-						<hr>
-							<a href="/admin/usuarios"><img class="img-circle img-borde" height="250px" src="http://imagenes.es.sftcdn.net/blog/es/2010/07/user-account-control-icon.jpg" /></a>
-								<br><br><br><br>
-				
-											
 					    <div class="bs-example">
-					    <div class="panel panel-primary">
+					    <div class="panel panel-success">
 					      <!-- Default panel contents -->
 					      <div class="panel-heading">Modificar Usuarios del Sistema</div>
 					      <div class="panel-body">
-							<b>En esta sección es posible modificar, es decir, se puede ver, agregar o modificar los siguientes módulos de ActiveCab:</b><br>
+
+						
+						<hr>
+							<a href="/admin/usuarios"><img class="img-circle img-borde2" height="250px" src="http://imagenes.es.sftcdn.net/blog/es/2010/07/user-account-control-icon.jpg" /></a>
+								<br><br><br><br>
+				
+							<b>En esta sección es posible ver, agregar o modificar los siguientes módulos de ActiveCab:</b><br>
 					      </div>
 
 					      <!-- List group -->
@@ -65,6 +66,8 @@
 					  </div>
 					</div>
 			</div>
+			<div class="alert alert-danger centro1">CUIDADO, modificar elementos podría afectar el buen funcionamiento del Sistema ActiveCab</div>
+
 		</div>
 	</div>
 </div>
