--- a/ProyectoPBD/app/views/admin/usuarios.html.erb
+++ b/ProyectoPBD/app/views/admin/usuarios.html.erb
@@ -2,12 +2,17 @@
 		<br><br><br>
 
         <div class="row">
+
             <div class="col-lg-12 ">
+               	<%= link_to 'Atras', :back, :class => "btn btn-warning" %>
+
 				<div class="row cn1">
 					<div class="col-lg-4 ">
+						<%= link_to image_tag("http://fc01.deviantart.net/fs70/f/2011/252/e/b/chauffeur_hat_by_pukey187-d49bahz.png", :height=> 150, :class=>'img-circle img-borde'), :controller => 'concepts'%>
+
 						<h3>Conductores</h3>
-												<hr>
-							<a href="#"><img class="img-circle img-borde" height="250px" src="http://fc01.deviantart.net/fs70/f/2011/252/e/b/chauffeur_hat_by_pukey187-d49bahz.png" /></a>
+						<hr>
+
 				
 						<br><br>
 
@@ -15,18 +20,21 @@
 
 					</div>
 					<div class="col-lg-4 ">
+						<%= link_to image_tag("https://cdn0.iconfinder.com/data/icons/online-shopping-3/78/Shopping_icons_vector-14-512.png", :height=> 150, :class=>'img-circle img-borde'), :controller => 'concepts'%>
+
 						<h3>Operadores</h3>
 												<hr>
-							<a href="#"><img class="img-circle img-borde" height="250px" src="https://cdn0.iconfinder.com/data/icons/online-shopping-3/78/Shopping_icons_vector-14-512.png" /></a>
 				
 						<br><br>
 
 
 					</div>
 					<div class="col-lg-4 ">
+						<%= link_to image_tag("http://www.nocedal.cl/nuevo-sitio/wp-content/themes/nocedal_theme/img/cumple_icon_big.png", :height=> 150, :class=>'img-circle img-borde'), :controller => 'concepts'%>
+
 						<h3>Empresas</h3>
 												<hr>
-							<a href="#"><img class="img-circle img-borde" height="250px" src="http://www.nocedal.cl/nuevo-sitio/wp-content/themes/nocedal_theme/img/cumple_icon_big.png" /></a>
+
 				
 						<br><br>
 
@@ -39,9 +47,12 @@
             <div class="col-lg-12 ">
 				<div class="row cn1">
 					<div class="col-lg-4 ">
+						<%= link_to image_tag("http://www.s3p.es/docs/servicios/noticia-1380094853.png", :height=> 150, :class=>'img-circle img-borde'), :controller => 'concepts'%>
+
+
 						<h3>Cliente Natural</h3>
 												<hr>
-							<a href="#"><img class="img-circle img-borde" height="250px" src="http://www.hanzoarchives.com/wp-content/uploads/2013/06/social_media_icon.jpg" /></a>
+
 				
 						<br><br>
 
@@ -49,18 +60,22 @@
 
 					</div>
 					<div class="col-lg-4 ">
+						<%= link_to image_tag("http://www.orbitalpharma.com/clientes_files/icon-service.jpg", :height=> 150, :class=>'img-circle img-borde'), :controller => 'concepts'%>
+
 						<h3>Cliente Empresa</h3>
 												<hr>
-							<a href="#"><img class="img-circle img-borde" height="250px" src="http://www.orbitalpharma.com/clientes_files/icon-service.jpg" /></a>
-				
+
 						<br><br>
 
 
 					</div>
 					<div class="col-lg-4 ">
+						<%= link_to image_tag("http://previewcf.turbosquid.com/Preview/Content_2010_10_05__13_25_34/NY_cab_01.jpg6e52d934-0bfe-45c8-8fa2-c925bff51d06Larger.jpg", :height=> 150, :class=>'img-circle img-borde'), :controller => 'concepts'%>
+
+
 						<h3>Vehículos</h3>
 												<hr>
-							<a href="#"><img class="img-circle img-borde" height="250px" src="http://previewcf.turbosquid.com/Preview/Content_2010_10_05__13_25_34/NY_cab_01.jpg6e52d934-0bfe-45c8-8fa2-c925bff51d06Larger.jpg" /></a>
+
 				
 						<br><br>
 
