--- a/ProyectoPBD/app/views/home/index.html.erb
+++ b/ProyectoPBD/app/views/home/index.html.erb
@@ -62,7 +62,7 @@
 
       <div class="row featurette">
         <div class="col-md-5">
-          <img src="../../assets/phone.png" alt="" class="img-rounded cent-ver shd" height="100%">
+          <img src="../../assets/phone.png" alt="" class="img-rounded cent-ver" height="100%">
         </div>
         <div class="col-md-7">
           <h2 class="featurette-heading">Solicitar viajes en radio taxi nunca fue tan fácil. <span class="text-muted">Pruebalo tu mismo!.</span></h2>
