--- a/ProyectoPBD/app/assets/stylesheets/admin.css.scss
+++ b/ProyectoPBD/app/assets/stylesheets/admin.css.scss
@@ -11,16 +11,41 @@
 
 }
 .img-borde:hover{
-	border: 10px solid green;
+	border: 6px solid green;
+	box-shadow: inset 5px 5px 20px 5px #CCCCCC;
 	transition: all 0.3s ease 0s;
 	transition-property: all;
 	transition-duration: 0.3s;
 	transition-timing-function: ease;
 	transition-delay: 0s;
+	box-shadow: 10px 10px 5px 2px rgba(100, 100, 100, 0.5);
 
 	
 
 }
+
+.img-borde2{
+	border: 8px solid grey;
+
+}
+.img-borde2:hover{
+	border: 6px solid orange;
+	box-shadow: inset 5px 5px 20px 5px #CCCCCC;
+	transition: all 0.3s ease 0s;
+	transition-property: all;
+	transition-duration: 0.3s;
+	transition-timing-function: ease;
+	transition-delay: 0s;
+	box-shadow: 10px 10px 5px 2px rgba(100, 100, 100, 0.5);
+
+	
+
+}
+
+
+
+
+
 
 .cin1{
 	padding-left: 10%;
