--- a/ProyectoPBD/app/views/admin/costos_otros.html.erb
+++ b/ProyectoPBD/app/views/admin/costos_otros.html.erb
@@ -1,13 +1,19 @@
 <div class="container marg2">
 		<br><br><br>
-
+		
         <div class="row">
+
+
             <div class="col-lg-12 ">
+            	<%= link_to 'Atras', :back, :class => "btn btn-warning izquierda" %>
 				<div class="row cn1">
 					<div class="col-lg-4 ">
+							<!--<a href="#"><img class="img-circle img-borde" height="250px" src="https://lh4.ggpht.com/xy_lXoF9yFyIYHPgu4nHF-7-kMUmIvQzahQRG9LlsKmJ23KRpAs_RAYurSbzpzseo-Rc=w300" /></a> -->
+						<%= link_to image_tag("https://lh4.ggpht.com/xy_lXoF9yFyIYHPgu4nHF-7-kMUmIvQzahQRG9LlsKmJ23KRpAs_RAYurSbzpzseo-Rc=w300", :height=> 150, :class=>'img-circle img-borde'), :controller => 'concepts'%>
+
 						<h3>Valor Kilometro</h3>
 												<hr>
-							<a href="#"><img class="img-circle img-borde" height="250px" src="https://lh4.ggpht.com/xy_lXoF9yFyIYHPgu4nHF-7-kMUmIvQzahQRG9LlsKmJ23KRpAs_RAYurSbzpzseo-Rc=w300" /></a>
+
 				
 						<br><br>
 
@@ -15,18 +21,24 @@
 
 					</div>
 					<div class="col-lg-4 ">
+							
+							<%= link_to image_tag("http://images.all-free-download.com/images/graphiclarge/checkered_flag_101462.jpg", :height=> 150, :class=>'img-circle img-borde'), :controller => 'concepts'%>
+
 						<h3>Bajada de bandera</h3>
 												<hr>
-							<a href="#"><img class="img-circle img-borde" height="250px" src="http://images.all-free-download.com/images/graphiclarge/checkered_flag_101462.jpg" /></a>
-				
+
 						<br><br>
 
 
 					</div>
 					<div class="col-lg-4 ">
+					<%= link_to image_tag("http://2.bp.blogspot.com/-Ya4hin4tBrM/UW6G_Cze4BI/AAAAAAAABEI/bifVd-WMILI/s1600/porcentaje1.jpg", :height=> 150, :class=>'img-circle img-borde'), :controller => 'concepts'%>
+
+					
+						
+
 						<h3>Comisión dueño de vehículos</h3>
 												<hr>
-							<a href="#"><img class="img-circle img-borde" height="250px" src="http://2.bp.blogspot.com/-Ya4hin4tBrM/UW6G_Cze4BI/AAAAAAAABEI/bifVd-WMILI/s1600/porcentaje1.jpg" /></a>
 				
 						<br><br>
 
@@ -39,34 +51,38 @@
             <div class="col-lg-12 ">
 				<div class="row cn1">
 					<div class="col-lg-4 ">
+
+						<%= link_to image_tag("http://www.s3p.es/docs/servicios/noticia-1380094853.png", :height=> 150, :class=>'img-circle img-borde'), :controller => 'concepts'%>
+
 						<h3>Mensaje revisión técnica</h3>
-												<hr>
-							<a href="#"><img class="img-circle img-borde" height="250px" src="http://www.s3p.es/docs/servicios/noticia-1380094853.png" /></a>
-				
+												<hr>				
 						<br><br>
 
 
 
 					</div>
 					<div class="col-lg-4 ">
+
+						<%= link_to image_tag("http://conconchile.cl/wp-content/uploads/2013/06/google-maps-icon.jpg", :height=> 150, :class=>'img-circle img-borde'), :controller => 'concepts'%>
+
+
 						<h3>Comunas</h3>
-												<hr>
-							<a href="#"><img class="img-circle img-borde" height="250px" src="http://conconchile.cl/wp-content/uploads/2013/06/google-maps-icon.jpg" /></a>
-				
+												<hr>				
 						<br><br>
 
 
 					</div>
 					<div class="col-lg-4 ">
+
+						<%= link_to image_tag("http://www.ctbay.com/templates/18/images/fees_icon.jpg", :height=> 150, :class=>'img-circle img-borde'), :controller => 'concepts'%>
+
 						<h3>Tarifas Fijas</h3>
-												<hr>
-							<a href="#"><img class="img-circle img-borde" height="250px" src="http://www.ctbay.com/templates/18/images/fees_icon.jpg" /></a>
-				
+												<hr>				
 						<br><br>
 
 
 					</div>
-				</div>
+				</div> 
 			</div>
 		</div>	
 </div>
