--- a/ProyectoPBD/app/views/natural_clients/edit.html.erb
+++ b/ProyectoPBD/app/views/natural_clients/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Ver', @natural_client %> |
-<%= link_to 'Volver', natural_clients_path %>
+<%= link_to 'Show', @natural_client %> |
+<%= link_to 'Back', natural_clients_path %>
