--- a/ProyectoPBD/app/views/schedulings/show.html.erb
+++ b/ProyectoPBD/app/views/schedulings/show.html.erb
@@ -15,10 +15,5 @@
   <%= @scheduling.run_cli %>
 </p>
 
-<p>
-  <strong>Cli run cli:</strong>
-  <%= @scheduling.cli_run_cli %>
-</p>
-
-<%= link_to 'Editar', edit_scheduling_path(@scheduling) %> |
-<%= link_to 'Volver', schedulings_path %>
+<%= link_to 'Edit', edit_scheduling_path(@scheduling) %> |
+<%= link_to 'Back', schedulings_path %>
