--- a/ProyectoPBD/app/views/travel_requests/new.html.erb
+++ b/ProyectoPBD/app/views/travel_requests/new.html.erb
@@ -1,4 +1,5 @@
+<h1>New travel_request</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Volver', travel_requests_path %>
+<%= link_to 'Back', travel_requests_path %>
