--- a/ProyectoPBD/app/views/travels/edit.html.erb
+++ b/ProyectoPBD/app/views/travels/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Ver', @travel %> |
-<%= link_to 'Volver', travels_path %>
+<%= link_to 'Show', @travel %> |
+<%= link_to 'Back', travels_path %>
