--- a/ProyectoPBD/app/views/travels/index.html.erb
+++ b/ProyectoPBD/app/views/travels/index.html.erb
@@ -5,7 +5,6 @@
     <tr>
       <th>Run driv</th>
       <th>Id trav req</th>
-      <th>Id bill det</th>
       <th>Hora ini via</th>
       <th>Tiemp est via</th>
       <th>Dist est via</th>
@@ -21,14 +20,13 @@
       <tr>
         <td><%= travel.run_driv %></td>
         <td><%= travel.id_trav_req %></td>
-        <td><%= travel.id_bill_det %></td>
         <td><%= travel.hora_ini_via %></td>
         <td><%= travel.tiemp_est_via %></td>
         <td><%= travel.dist_est_via %></td>
         <td><%= travel.val_via %></td>
-        <td><%= link_to 'Ver', travel %></td>
-        <td><%= link_to 'Editar', edit_travel_path(travel) %></td>
-        <td><%= link_to 'Eliminar', travel, method: :delete, data: { confirm: '¿Confirma eliminación??' } %></td>
+        <td><%= link_to 'Show', travel %></td>
+        <td><%= link_to 'Edit', edit_travel_path(travel) %></td>
+        <td><%= link_to 'Destroy', travel, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -36,4 +34,4 @@
 
 <br>
 
-<%= link_to 'Nuevo', new_travel_path %>
+<%= link_to 'New Travel', new_travel_path %>
