--- a/ProyectoPBD/app/views/enterprise_clients/edit.html.erb
+++ b/ProyectoPBD/app/views/enterprise_clients/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Ver', @enterprise_client %> |
-<%= link_to 'Volver', enterprise_clients_path %>
+<%= link_to 'Show', @enterprise_client %> |
+<%= link_to 'Back', enterprise_clients_path %>
