--- a/ProyectoPBD/app/views/schedulings/edit.html.erb
+++ b/ProyectoPBD/app/views/schedulings/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Ver', @scheduling %> |
-<%= link_to 'Volver', schedulings_path %>
+<%= link_to 'Show', @scheduling %> |
+<%= link_to 'Back', schedulings_path %>
