--- a/ProyectoPBD/app/views/schedulings/index.html.erb
+++ b/ProyectoPBD/app/views/schedulings/index.html.erb
@@ -6,7 +6,6 @@
       <th>Id off veh</th>
       <th>Run driv</th>
       <th>Run cli</th>
-      <th>Cli run cli</th>
       <th></th>
       <th></th>
       <th></th>
@@ -19,10 +18,9 @@
         <td><%= scheduling.id_off_veh %></td>
         <td><%= scheduling.run_driv %></td>
         <td><%= scheduling.run_cli %></td>
-        <td><%= scheduling.cli_run_cli %></td>
-        <td><%= link_to 'Ver', scheduling %></td>
-        <td><%= link_to 'Editar', edit_scheduling_path(scheduling) %></td>
-        <td><%= link_to 'Eliminar', scheduling, method: :delete, data: { confirm: '¿Confirma eliminación?' } %></td>
+        <td><%= link_to 'Show', scheduling %></td>
+        <td><%= link_to 'Edit', edit_scheduling_path(scheduling) %></td>
+        <td><%= link_to 'Destroy', scheduling, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -30,4 +28,4 @@
 
 <br>
 
-<%= link_to 'Nuevo', new_scheduling_path %>
+<%= link_to 'New Scheduling', new_scheduling_path %>
