--- a/ProyectoPBD/app/views/travels/show.html.erb
+++ b/ProyectoPBD/app/views/travels/show.html.erb
@@ -11,11 +11,6 @@
 </p>
 
 <p>
-  <strong>Id bill det:</strong>
-  <%= @travel.id_bill_det %>
-</p>
-
-<p>
   <strong>Hora ini via:</strong>
   <%= @travel.hora_ini_via %>
 </p>
@@ -35,5 +30,5 @@
   <%= @travel.val_via %>
 </p>
 
-<%= link_to 'Editar', edit_travel_path(@travel) %> |
-<%= link_to 'Volver', travels_path %>
+<%= link_to 'Edit', edit_travel_path(@travel) %> |
+<%= link_to 'Back', travels_path %>
