--- a/ProyectoPBD/app/views/devise/registrations/new.html.erb
+++ b/ProyectoPBD/app/views/devise/registrations/new.html.erb
@@ -6,6 +6,22 @@
   <div><%= f.label :email %><br />
   <%= f.email_field :email, :autofocus => true %></div>
 
+  <div><%= f.label :nombre %><br />
+  <%= f.text_field :nombre %></div>
+
+  <div><%= f.label :apellidos %><br />
+  <%= f.text_field :apellidos %></div>
+
+  <div><%= f.label :telefono1 %><br />
+  <%= f.text_field :telefono1 %></div>
+
+  <div><%= f.label :telefono2 %><br />
+  <%= f.text_field :telefono2 %></div>
+
+  <div><%= f.label :rut %><br />
+  <%= f.text_field :rut %></div>
+
+
   <div><%= f.label :password %><br />
   <%= f.password_field :password %></div>
 
@@ -16,3 +32,5 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+nombre, :apellidos, :telefono1, :telefono2, :rut, :email, :password, :password_confirmation
