--- a/ProyectoPBD/app/views/layouts/application.html.erb
+++ b/ProyectoPBD/app/views/layouts/application.html.erb
@@ -58,7 +58,7 @@
         <!--<li><a href="welcome/qs"><i class="fa fa-university"></i> Quiénes somos</a></li>-->
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to  current_user.email, edit_user_registration_path %></li>
+        <li><%= link_to  current_user.nombre, edit_user_registration_path %></li>
         <li> <%=link_to "Cerrar Sesión", destroy_user_session_path, method: :delete %> </li>
 
         
