--- a/ProyectoPBD/app/views/base_prices/new.html.erb
+++ b/ProyectoPBD/app/views/base_prices/new.html.erb
@@ -1,5 +1,9 @@
+<% if user_signed_in? and current_user.tipo == 'administrador' %>
+
 <h1>New base_price</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Volver', base_prices_path %>
+
+<% end %>
