--- a/ProyectoPBD/app/views/natural_clients/edit.html.erb
+++ b/ProyectoPBD/app/views/natural_clients/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing natural_client</h1>
+<% if user_signed_in? and current_user.tipo == 'administrador' %>
 
-<%= render 'form' %>
+	<h1>Editing natural_client</h1>
 
-<%= link_to 'Show', @natural_client %> |
-<%= link_to 'Back', natural_clients_path %>
+	<%= render 'form' %>
+
+	<%= link_to 'Show', @natural_client %> |
+	<%= link_to 'Back', natural_clients_path %>
+
+<% end %>
