--- a/ProyectoPBD/app/views/technical_review_alerts/edit.html.erb
+++ b/ProyectoPBD/app/views/technical_review_alerts/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing technical_review_alert</h1>
+<% if user_signed_in? and current_user.tipo == 'administrador' %>
 
-<%= render 'form' %>
+	<h1>Editing technical_review_alert</h1>
 
-<%= link_to 'Ver', @technical_review_alert %> |
-<%= link_to 'Volver', technical_review_alerts_path %>
+	<%= render 'form' %>
+
+	<%= link_to 'Ver', @technical_review_alert %> |
+	<%= link_to 'Volver', technical_review_alerts_path %>
+
+<% end %>
