--- a/ProyectoPBD/app/views/welcome/tarifas.html.erb
+++ b/ProyectoPBD/app/views/welcome/tarifas.html.erb
@@ -41,7 +41,7 @@
 						<i class="fa fa-taxi fa-5x amari"></i>
 					</div><br><br>
 					<div class="fijo1">
-					    <div class="whitec"><button type="button" class="btn btn-default"> <%= link_to "Solicita un taxi", :controller => :cliente, :action => :solicitud %> </button>
+					    <%= button_to "Solicita un taxi", :controller => :cliente, :action => :solicitud %>
 					    </div>
 					</div>
 				</div>
