--- a/ProyectoPBD/app/views/admin/index.html.erb
+++ b/ProyectoPBD/app/views/admin/index.html.erb
@@ -1,6 +1,8 @@
+<% if user_signed_in? and current_user.tipo == 'administrador' %>
+
 <div class="container marg2">
-<br>
-<br><br>
+		<br>
+		<br><br>
         <div class="row">
             <div class="col-lg-12 ">
 				<div class="row cn1">
@@ -10,12 +12,12 @@
 					      <!-- Default panel contents -->
 					      <div class="panel-heading">Modificar costos y Otros</div>
 
-
 					      <div class="panel-body">
 
 						<hr>
+							<%= link_to image_tag("http://1.bp.blogspot.com/_COiSBqI9PLE/Sg8xxy1U72I/AAAAAAAAAX8/PV_9VhRQygw/s400/WEB+Icono+Pagina+Web+en+Construccion.jpg", :height=> 250, :class=>'img-circle img-borde'), :controller => 'admin', :action => 'costos_otros'%>
 
-							<a href="admin/costos_otros"><img class="img-circle img-borde" height="250px" src="http://1.bp.blogspot.com/_COiSBqI9PLE/Sg8xxy1U72I/AAAAAAAAAX8/PV_9VhRQygw/s400/WEB+Icono+Pagina+Web+en+Construccion.jpg" /></a>
+
 				
 						<br><br><br><br>
 				
@@ -47,7 +49,8 @@
 
 						
 						<hr>
-							<a href="/admin/usuarios"><img class="img-circle img-borde2" height="250px" src="http://imagenes.es.sftcdn.net/blog/es/2010/07/user-account-control-icon.jpg" /></a>
+							<%= link_to image_tag("http://imagenes.es.sftcdn.net/blog/es/2010/07/user-account-control-icon.jpg", :height=> 250, :class=>'img-circle img-borde'), :controller => 'admin', :action => 'usuarios'%>
+
 								<br><br><br><br>
 				
 							<b>En esta sección es posible ver, agregar o modificar los siguientes módulos de ActiveCab:</b><br>
@@ -71,4 +74,31 @@
 		</div>
 	</div>
 </div>
+<% else %>
+<div class="container marg2">
+<br>
+<hr>
+<br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
+
+				<div class="centro1">	
+					<%= link_to image_tag("http://www.elolaconsultores.com/images/siluetaHombre2.png"), :controller => 'admin', :action => 'usuarios'%>
+
+					<br><br>
+
+					<h4>No se encuentra capacitado para acceder a esta sección de AciveCab, verifique su rol y permisos que conlleva.</h4>
+
+
+					<p><%=button_to 'Iniciar sesión', {:controller=> 'users', :action=> 'sign_in'}, :class=>'btn btn-success' %>
+
+						</p>
+
+				</div>				
+			</div>
+		</div>
+	</div>
+
+
+<% end %>
 
