--- a/ProyectoPBD/app/views/base_prices/show.html.erb
+++ b/ProyectoPBD/app/views/base_prices/show.html.erb
@@ -1,3 +1,5 @@
+<% if user_signed_in? and current_user.tipo == 'administrador' %>
+
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -22,3 +24,5 @@
 
 <%= link_to 'Editar', edit_base_price_path(@base_price) %> |
 <%= link_to 'Volver', base_prices_path %>
+
+<% end %>
