--- a/ProyectoPBD/app/views/comunnes/index.html.erb
+++ b/ProyectoPBD/app/views/comunnes/index.html.erb
@@ -1,29 +1,33 @@
-<h1>Listing comunnes</h1>
+<% if user_signed_in? and current_user.tipo == 'administrador' %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Nom comun</th>
-      <th>Num comun</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
+  <h1>Listing comunnes</h1>
 
-  <tbody>
-    <% @comunnes.each do |comunne| %>
+  <table>
+    <thead>
       <tr>
-        <td><%= comunne.nom_comun %></td>
-        <td><%= comunne.num_comun %></td>
-        <td><%= link_to 'Ver', comunne %></td>
-        <td><%= link_to 'Editar', edit_comunne_path(comunne) %></td>
-        <td><%= link_to 'Eliminar', comunne, method: :delete, data: { confirm: '¿Confirma eliminación?' } %></td>
+        <th>Nom comun</th>
+        <th>Num comun</th>
+        <th></th>
+        <th></th>
+        <th></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @comunnes.each do |comunne| %>
+        <tr>
+          <td><%= comunne.nom_comun %></td>
+          <td><%= comunne.num_comun %></td>
+          <td><%= link_to 'Ver', comunne %></td>
+          <td><%= link_to 'Editar', edit_comunne_path(comunne) %></td>
+          <td><%= link_to 'Eliminar', comunne, method: :delete, data: { confirm: '¿Confirma eliminación?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'Nuevo', new_comunne_path %>
+  <br>
+
+  <%= link_to 'Nuevo', new_comunne_path %>
+
+<% end %>
