--- a/ProyectoPBD/app/views/comunnes/show.html.erb
+++ b/ProyectoPBD/app/views/comunnes/show.html.erb
@@ -1,14 +1,18 @@
-<p id="notice"><%= notice %></p>
+<% if user_signed_in? and current_user.tipo == 'administrador' %>
 
-<p>
-  <strong>Nom comun:</strong>
-  <%= @comunne.nom_comun %>
-</p>
+	<p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Num comun:</strong>
-  <%= @comunne.num_comun %>
-</p>
+	<p>
+	  <strong>Nom comun:</strong>
+	  <%= @comunne.nom_comun %>
+	</p>
 
-<%= link_to 'Editar', edit_comunne_path(@comunne) %> |
-<%= link_to 'Volver', comunnes_path %>
+	<p>
+	  <strong>Num comun:</strong>
+	  <%= @comunne.num_comun %>
+	</p>
+
+	<%= link_to 'Editar', edit_comunne_path(@comunne) %> |
+	<%= link_to 'Volver', comunnes_path %>
+
+<% end %>
