--- a/ProyectoPBD/app/views/devise/registrations/new.html.erb
+++ b/ProyectoPBD/app/views/devise/registrations/new.html.erb
@@ -1,36 +1,45 @@
-<h2>Sign up</h2>
+<div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
+        <div class="row cn1">
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+      <h2>Sign up</h2>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+      <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+        <%= devise_error_messages! %>
 
-  <div><%= f.label :nombre %><br />
-  <%= f.text_field :nombre %></div>
+        <div><%= f.label :email %><br />
+        <%= f.email_field :email, :autofocus => true %></div>
 
-  <div><%= f.label :apellidos %><br />
-  <%= f.text_field :apellidos %></div>
+        <div><%= f.label :nombre %><br />
+        <%= f.text_field :nombre %></div>
 
-  <div><%= f.label :telefono1 %><br />
-  <%= f.text_field :telefono1 %></div>
+        <div><%= f.label :apellidos %><br />
+        <%= f.text_field :apellidos %></div>
 
-  <div><%= f.label :telefono2 %><br />
-  <%= f.text_field :telefono2 %></div>
+        <div><%= f.label :telefono1 %><br />
+        <%= f.text_field :telefono1 %></div>
 
-  <div><%= f.label :rut %><br />
-  <%= f.text_field :rut %></div>
+        <div><%= f.label :telefono2 %><br />
+        <%= f.text_field :telefono2 %></div>
+
+        <div><%= f.label :rut %><br />
+        <%= f.text_field :rut %></div>
 
 
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
+        <div><%= f.label :password %><br />
+        <%= f.password_field :password %></div>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+        <div><%= f.label :password_confirmation %><br />
+        <%= f.password_field :password_confirmation %></div>
 
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
+        <div><%= f.submit "Sign up" %></div>
+      <% end %>
 
-<%= render "devise/shared/links" %>
-
-nombre, :apellidos, :telefono1, :telefono2, :rut, :email, :password, :password_confirmation
+      <%= render "devise/shared/links" %>
+      </div>
+    </div>
+  </div>
+</div>
