--- a/ProyectoPBD/app/views/drivers/index.html.erb
+++ b/ProyectoPBD/app/views/drivers/index.html.erb
@@ -1,39 +1,42 @@
-<h1>Listing drivers</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Run driv</th>
-      <th>Nom cond</th>
-      <th>Apells cond</th>
-      <th>Tel1 cond</th>
-      <th>Tel2 cond</th>
-      <th>Email cond</th>
-      <th>Venc licenc cond</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
+  <h1>Listing drivers</h1>
 
-  <tbody>
-    <% @drivers.each do |driver| %>
+  <table>
+    <thead>
       <tr>
-        <td><%= driver.run_driv %></td>
-        <td><%= driver.nom_cond %></td>
-        <td><%= driver.apells_cond %></td>
-        <td><%= driver.tel1_cond %></td>
-        <td><%= driver.tel2_cond %></td>
-        <td><%= driver.email_cond %></td>
-        <td><%= driver.venc_licenc_cond %></td>
-        <td><%= link_to 'Ver', driver %></td>
-        <td><%= link_to 'Editar', edit_driver_path(driver) %></td>
-        <td><%= link_to 'Eliminar', driver, method: :delete, data: { confirm: '¿Confirma eliminación?' } %></td>
+        <th>Run driv</th>
+        <th>Nom cond</th>
+        <th>Apells cond</th>
+        <th>Tel1 cond</th>
+        <th>Tel2 cond</th>
+        <th>Email cond</th>
+        <th>Venc licenc cond</th>
+        <th></th>
+        <th></th>
+        <th></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @drivers.each do |driver| %>
+        <tr>
+          <td><%= driver.run_driv %></td>
+          <td><%= driver.nom_cond %></td>
+          <td><%= driver.apells_cond %></td>
+          <td><%= driver.tel1_cond %></td>
+          <td><%= driver.tel2_cond %></td>
+          <td><%= driver.email_cond %></td>
+          <td><%= driver.venc_licenc_cond %></td>
+          <td><%= button_to 'Ver', driver, :method=>'get', :class=>'btn btn-primary' %></td>
+          <td><%= link_to 'Editar', edit_driver_path(driver) %></td>
+          <td><%= link_to 'Eliminar', driver, method: :delete, data: { confirm: '¿Confirma eliminación?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'Nuevo', new_driver_path %>
+  <br>
+
+  <%= link_to 'Nuevo', new_driver_path %>
+
+
