--- a/ProyectoPBD/app/views/enterprise_clients/show.html.erb
+++ b/ProyectoPBD/app/views/enterprise_clients/show.html.erb
@@ -1,14 +1,18 @@
-<p id="notice"><%= notice %></p>
+<% if user_signed_in? and current_user.tipo == 'administrador' %>
 
-<p>
-  <strong>Run cli:</strong>
-  <%= @enterprise_client.run_cli %>
-</p>
+	<p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Rut ent:</strong>
-  <%= @enterprise_client.rut_ent %>
-</p>
+	<p>
+	  <strong>Run cli:</strong>
+	  <%= @enterprise_client.run_cli %>
+	</p>
 
-<%= link_to 'Edit', edit_enterprise_client_path(@enterprise_client) %> |
-<%= link_to 'Back', enterprise_clients_path %>
+	<p>
+	  <strong>Rut ent:</strong>
+	  <%= @enterprise_client.rut_ent %>
+	</p>
+
+	<%= link_to 'Edit', edit_enterprise_client_path(@enterprise_client) %> |
+	<%= link_to 'Back', enterprise_clients_path %>
+
+<% end %>
