--- a/ProyectoPBD/app/views/fixed_rates/edit.html.erb
+++ b/ProyectoPBD/app/views/fixed_rates/edit.html.erb
@@ -1,6 +1,21 @@
-<h1>Editing fixed_rate</h1>
+<% if user_signed_in? and current_user.tipo == 'administrador' %>
+  <div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">   
 
-<%= render 'form' %>
+				<h1>Editing fixed_rate</h1>
 
-<%= link_to 'Ver', @fixed_rate %> |
-<%= link_to 'Volver', fixed_rates_path %>
+				<%= render 'form' %>
+
+				<%= link_to 'Ver', @fixed_rate %> |
+				<%= link_to 'Volver', fixed_rates_path %>
+
+			</div>
+		</div>
+	</div>
+</div>
+
+
+<% end %>
