--- a/ProyectoPBD/app/views/fixed_rates/new.html.erb
+++ b/ProyectoPBD/app/views/fixed_rates/new.html.erb
@@ -1,5 +1,16 @@
-<h1>New fixed_rate</h1>
+<% if user_signed_in? and current_user.tipo == 'administrador' %>
+  <div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">   
 
-<%= render 'form' %>
+				<h1>New fixed_rate</h1>
 
-<%= link_to 'Volver', fixed_rates_path %>
+				<%= render 'form' %>
+
+				<%= link_to 'Volver', fixed_rates_path %>
+		</div>
+	</div>
+</div>
+<% end %>
