--- a/ProyectoPBD/app/views/kilometers_prices/edit.html.erb
+++ b/ProyectoPBD/app/views/kilometers_prices/edit.html.erb
@@ -1,6 +1,10 @@
+<% if user_signed_in? and current_user.tipo == 'administrador' %>
+
 <h1>Editing kilometers_price</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Ver', @kilometers_price %> |
 <%= link_to 'Volver', kilometers_prices_path %>
+
+<% end %>
