--- a/ProyectoPBD/app/views/kilometers_prices/new.html.erb
+++ b/ProyectoPBD/app/views/kilometers_prices/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New kilometers_price</h1>
+<% if user_signed_in? and current_user.tipo == 'administrador' %>
 
-<%= render 'form' %>
+	<h1>New kilometers_price</h1>
 
-<%= link_to 'Volver', kilometers_prices_path %>
+	<%= render 'form' %>
+
+	<%= link_to 'Volver', kilometers_prices_path %>
+
+<% end %>
