--- a/ProyectoPBD/app/views/kilometers_prices/show.html.erb
+++ b/ProyectoPBD/app/views/kilometers_prices/show.html.erb
@@ -1,24 +1,28 @@
-<p id="notice"><%= notice %></p>
+<% if user_signed_in? and current_user.tipo == 'administrador' %>
 
-<p>
-  <strong>Val km:</strong>
-  <%= @kilometers_price.val_km %>
-</p>
+	<p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Ini val km:</strong>
-  <%= @kilometers_price.ini_val_km %>
-</p>
+	<p>
+	  <strong>Val km:</strong>
+	  <%= @kilometers_price.val_km %>
+	</p>
 
-<p>
-  <strong>Fin val km:</strong>
-  <%= @kilometers_price.fin_val_km %>
-</p>
+	<p>
+	  <strong>Ini val km:</strong>
+	  <%= @kilometers_price.ini_val_km %>
+	</p>
 
-<p>
-  <strong>Estado val km:</strong>
-  <%= @kilometers_price.estado_val_km %>
-</p>
+	<p>
+	  <strong>Fin val km:</strong>
+	  <%= @kilometers_price.fin_val_km %>
+	</p>
 
-<%= link_to 'Editar', edit_kilometers_price_path(@kilometers_price) %> |
-<%= link_to 'Volver', kilometers_prices_path %>
+	<p>
+	  <strong>Estado val km:</strong>
+	  <%= @kilometers_price.estado_val_km %>
+	</p>
+
+	<%= link_to 'Editar', edit_kilometers_price_path(@kilometers_price) %> |
+	<%= link_to 'Volver', kilometers_prices_path %>
+
+<% end %>
