--- a/ProyectoPBD/app/views/natural_clients/index.html.erb
+++ b/ProyectoPBD/app/views/natural_clients/index.html.erb
@@ -1,27 +1,31 @@
-<h1>Listing natural_clients</h1>
+<% if user_signed_in? and current_user.tipo == 'administrador' %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Run cli</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
+  <h1>Listing natural_clients</h1>
 
-  <tbody>
-    <% @natural_clients.each do |natural_client| %>
+  <table>
+    <thead>
       <tr>
-        <td><%= natural_client.run_cli %></td>
-        <td><%= link_to 'Show', natural_client %></td>
-        <td><%= link_to 'Edit', edit_natural_client_path(natural_client) %></td>
-        <td><%= link_to 'Destroy', natural_client, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Run cli</th>
+        <th></th>
+        <th></th>
+        <th></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @natural_clients.each do |natural_client| %>
+        <tr>
+          <td><%= natural_client.run_cli %></td>
+          <td><%= link_to 'Show', natural_client %></td>
+          <td><%= link_to 'Edit', edit_natural_client_path(natural_client) %></td>
+          <td><%= link_to 'Destroy', natural_client, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Natural client', new_natural_client_path %>
+  <br>
+
+  <%= link_to 'New Natural client', new_natural_client_path %>
+
+<% end %>
