--- a/ProyectoPBD/app/views/owner_commissions/edit.html.erb
+++ b/ProyectoPBD/app/views/owner_commissions/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing owner_commission</h1>
+<% if user_signed_in? and current_user.tipo == 'administrador' %>
 
-<%= render 'form' %>
+	<h1>Editing owner_commission</h1>
 
-<%= link_to 'Ver', @owner_commission %> |
-<%= link_to 'Volver', owner_commissions_path %>
+	<%= render 'form' %>
+
+	<%= link_to 'Ver', @owner_commission %> |
+	<%= link_to 'Volver', owner_commissions_path %>
+
+<% end %>
