--- a/ProyectoPBD/app/views/owner_commissions/new.html.erb
+++ b/ProyectoPBD/app/views/owner_commissions/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New owner_commission</h1>
+<% if user_signed_in? and current_user.tipo == 'administrador' %>
 
-<%= render 'form' %>
+	<h1>New owner_commission</h1>
 
-<%= link_to 'Volver', owner_commissions_path %>
+	<%= render 'form' %>
+
+	<%= link_to 'Volver', owner_commissions_path %>
+
+<% end %>
