--- a/ProyectoPBD/app/views/owner_commissions/show.html.erb
+++ b/ProyectoPBD/app/views/owner_commissions/show.html.erb
@@ -1,19 +1,23 @@
-<p id="notice"><%= notice %></p>
+<% if user_signed_in? and current_user.tipo == 'administrador' %>
 
-<p>
-  <strong>Porcent comi prop:</strong>
-  <%= @owner_commission.porcent_comi_prop %>
-</p>
+	<p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Ini comi prop:</strong>
-  <%= @owner_commission.ini_comi_prop %>
-</p>
+	<p>
+	  <strong>Porcent comi prop:</strong>
+	  <%= @owner_commission.porcent_comi_prop %>
+	</p>
 
-<p>
-  <strong>Fin comi prop:</strong>
-  <%= @owner_commission.fin_comi_prop %>
-</p>
+	<p>
+	  <strong>Ini comi prop:</strong>
+	  <%= @owner_commission.ini_comi_prop %>
+	</p>
 
-<%= link_to 'Editar', edit_owner_commission_path(@owner_commission) %> |
-<%= link_to 'Volver', owner_commissions_path %>
+	<p>
+	  <strong>Fin comi prop:</strong>
+	  <%= @owner_commission.fin_comi_prop %>
+	</p>
+
+	<%= link_to 'Editar', edit_owner_commission_path(@owner_commission) %> |
+	<%= link_to 'Volver', owner_commissions_path %>
+
+<% end %>
