--- a/ProyectoPBD/app/views/technical_review_alerts/show.html.erb
+++ b/ProyectoPBD/app/views/technical_review_alerts/show.html.erb
@@ -1,9 +1,13 @@
-<p id="notice"><%= notice %></p>
+<% if user_signed_in? and current_user.tipo == 'administrador' %>
 
-<p>
-  <strong>Plant alert rev tec:</strong>
-  <%= @technical_review_alert.plant_alert_rev_tec %>
-</p>
+	<p id="notice"><%= notice %></p>
 
-<%= link_to 'Editar', edit_technical_review_alert_path(@technical_review_alert) %> |
-<%= link_to 'Volver', technical_review_alerts_path %>
+	<p>
+	  <strong>Plant alert rev tec:</strong>
+	  <%= @technical_review_alert.plant_alert_rev_tec %>
+	</p>
+
+	<%= link_to 'Editar', edit_technical_review_alert_path(@technical_review_alert) %> |
+	<%= link_to 'Volver', technical_review_alerts_path %>
+
+<% end %>
