Eliminada la gema qla de exception_handler
gema qla maldita imposible borrar :c pero igual lo logré :+1:

--- a/ProyectoPBD/app/views/vehicles/edit.html.erb
+++ b/ProyectoPBD/app/views/vehicles/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Ver', @vehicle %> |
-<%= link_to 'Volver', vehicles_path %>
+<%= button_to 'Ver', :method => 'get', :class => 'btn btn-info' @vehicle %> |
+<%= button_to 'Volver', :method => 'get', :class => 'btn btn-default' vehicles_path %>
